# zero2prod

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
configuration/: local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
