[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sanprasirt <kuforce@gmail.com>"]
edition = "2024"

[dependencies]
actix-web = "4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = "0.11"

[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"